--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i');
-
 body {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 14px;
   margin: 0;
 }
 
@@ -135,6 +133,7 @@ nav li a:hover {
 
 #content {
     width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
+    /* padding-left: 20px;
+    padding-right: 20px; */
 }
