--- a/styles/styles.css
+++ b/styles/styles.css
@@ -137,3 +137,90 @@ nav li a:hover {
     /* padding-left: 20px;
     padding-right: 20px; */
 }
+
+#issues {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#filter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.filter-btn {
+  font-weight: bold;
+  font-size: 12px;
+  color: #000000;
+  background-color: #ffffff;
+  border: none;
+  display: inline-block;
+  height: 30px;
+  padding: 0 20px;
+  text-align: center;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.active-btn {
+  background-color: #0b61ac;
+  color: #ffffff;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th {
+  background-color: #f1f1f1;
+  text-align: left;
+  padding: 10px;
+}
+
+tr {
+  border-top: 1px solid #f1f1f1;
+  height: 35px;
+}
+
+td {
+  padding: 10px;
+}
+
+#ticket-span {
+  font-weight: bold;
+  font-style: none;
+}
+
+.open {
+  text-align: center;
+  background-color: #4CAF50;
+  padding: 6px;
+  color: #ffffff;
+  border-radius: 4px;
+}
+
+.closed {
+  text-align: center;
+  background-color: #ff6500;
+  padding: 6px;
+  color: #ffffff;
+  border-radius: 4px;
+}
+
+.in-progress {
+  text-align: center;
+  background-color: #FFD700;
+  padding: 6px;
+  color: #000000;
+  border-radius: 4px;
+}
+
+.status {
+  text-align: center;
+}
