--- a/styles/form.css
+++ b/styles/form.css
@@ -1,8 +1,12 @@
-input.error {
+.error {
     border: 1px solid #ff0000;
   }
   
-  .error-message {
-    color: #ff0000;
-    font-style: italic;
-  }
+.error-message {
+  color: #ff0000;
+  font-style: italic;
+}
+
+textarea.error {
+  border: 1px solid #ff0000;
+} 
