--- a/styles/styles.css
+++ b/styles/styles.css
@@ -233,3 +233,5 @@ a {
   color: #0b61ac;
   text-decoration: none;
 }
+
+.hide { position:absolute; top:-1px; left:-1px; width:1px; height:1px; display: none;}
